# orange-builder

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/: exampleuse.py  orange_generator.py
src/helpers/: ifexists.py  variables.py
src/orange_builder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
